--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/your_database_name
+MONGO_URI=mongodb+srv://ravitejavaka81:Teja%4081858@cluster0.oatfp.mongodb.net/
 SESSION_SECRET=your-secret-key
 PORT=4000
